cmake_minimum_required(VERSION 3.27)
project(tars2cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(util)

add_executable(tars2cpp
        util/tc_autoptr.h
        util/tc_base64.h
        util/tc_bitmap.h
        util/tc_cas_queue.h
        util/tc_cgi.h
        util/tc_clientsocket.h
        util/tc_common.h
        util/tc_config.h
        util/tc_consistent_hash.h
        util/tc_consistent_hash_new.h
        util/tc_coroutine.h
        util/tc_coroutine_queue.h
        util/tc_cron.h
        util/tc_custom_protocol.h
        util/tc_des.h
        util/tc_docker.h
        util/tc_dyn_object.h
        util/tc_encoder.h
        util/tc_epoll_server.h
        util/tc_epoller.h
        util/tc_ex.h
        util/tc_fcontext.h
        util/tc_fifo.h
        util/tc_file.h
        util/tc_file_mutex.h
        util/tc_grpc.h
        util/tc_hash_fun.h
        util/tc_hashmap.h
        util/tc_hashmap_compact.h
        util/tc_http.h
        util/tc_http2.h
        util/tc_http_async.h
        util/tc_json.h
        util/tc_lock.h
        util/tc_logger.h
        util/tc_loop_queue.h
        util/tc_malloc_chunk.h
        util/tc_md5.h
        util/tc_mem_chunk.h
        util/tc_mem_queue.h
        util/tc_mem_vector.h
        util/tc_mmap.h
        util/tc_monitor.h
        util/tc_multi_hashmap.h
        util/tc_mysql.h
        util/tc_network_buffer.h
        util/tc_openssl.h
        util/tc_option.h
        util/tc_pack.h
        util/tc_parsepara.h
        util/tc_platform.h
        util/tc_port.h
        util/tc_proxy_info.h
        util/tc_rbtree.h
        util/tc_readers_writer_data.h
        util/tc_sem_mutex.h
        util/tc_sha.h
        util/tc_shm.h
        util/tc_singleton.h
        util/tc_socket.h
        util/tc_spin_lock.h
        util/tc_squeue.h
        util/tc_strptime.h
        util/tc_tea.h
        util/tc_thread.h
        util/tc_thread_cond.h
        util/tc_thread_mutex.h
        util/tc_thread_pool.h
        util/tc_thread_queue.h
        util/tc_thread_rwlock.h
        util/tc_timeout_queue.h
        util/tc_timeout_queue_map.h
        util/tc_timeout_queue_new.h
        util/tc_timeout_queue_noid.h
        util/tc_timeprovider.h
        util/tc_timer.h
        util/tc_transceiver.h
        util/tc_uuid_generator.h
        util/tc_xml.h
        main.cpp
        tars_cpp_utils.a)
